FACES-2662 Develop tests for the Liferay Faces JSF Showcase (make inputHidden use-cases consistent, make selectOneRadio work in Pluto, fix overflow for examples)

--- a/jsf-showcase-webapp/src/main/webapp/resources/css/showcase.css
+++ b/jsf-showcase-webapp/src/main/webapp/resources/css/showcase.css
@@ -103,6 +103,10 @@
 	display: inline;
 }
 
+.showcase-example {
+	overflow: hidden;
+}
+
 .showcase-example,.showcase-attribute-value,.showcase-parameter-value,.showcase-model-value,.showcase-container {
 	border: 1px solid #ddd;
 	-webkit-border-radius: 4px;
